[package]
name = "kvs"
version = "0.1.0"
authors = ["Olamide Omolola <omololaolamidex@gmail.com>"]
about = "A simple key-value store"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
flexbuffers = "25.2.10"
serde = { version = "1.0.219", features = ["serde_derive"] }


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs"
test = false

[lib]
doctest = false
