[package]
name = "kvs"
version = "0.1.0"
authors = ["Olamide Omolola <omololaolamidex@gmail.com>"]
about = "A simple key-value store"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
flexbuffers = "25.2.10"
serde = { version = "1.0.219", features = ["serde_derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs-client"
test = false

[[bin]]
name = "kvs-server"
test = false

[lib]
doctest = false
